docs: translation runbook (async translate-one, marker rows, rollout order, first backfill, who can call), spec --add-modules
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>